Tue Nov 23 22:00:12 MET 1999  Sven Neumann <sven@gimp.org>

	* app/menus.c: Looks like I managed to accidentially revert my
	change from Mon Nov 22. Put it back in.

Tue Nov 23 21:22:01 MET 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/AlienMap/AlienMap.c
	* plug-ins/AlienMap2/AlienMap2.c
	* plug-ins/borderaverage/borderaverage.c
	* plug-ins/common/CML_explorer.c
	* plug-ins/common/animationplay.c
	* plug-ins/common/animoptimize.c
	* plug-ins/common/apply_lens.c
	* plug-ins/common/autocrop.c
	* plug-ins/common/autostretch_hsv.c
	* plug-ins/common/blur.c
	* plug-ins/common/bumpmap.c
	* plug-ins/common/checkerboard.c
	* plug-ins/common/colorify.c
	* plug-ins/common/colortoalpha.c
	* plug-ins/common/compose.c
	* plug-ins/common/convmatrix.c
	* plug-ins/common/cubism.c
	* plug-ins/common/decompose.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/destripe.c
	* plug-ins/common/film.c
	* plug-ins/common/gif.c
	* plug-ins/common/grid.c
	* plug-ins/common/guillotine.c
	* plug-ins/common/jpeg.c
	* plug-ins/common/lic.c
	* plug-ins/common/mail.c
	* plug-ins/common/mapcolor.c
	* plug-ins/common/nova.c
	* plug-ins/common/oilify.c
	* plug-ins/common/papertile.c
	* plug-ins/common/png.c
	* plug-ins/common/ps.c
	* plug-ins/common/psp.c
	* plug-ins/common/screenshot.c
	* plug-ins/common/threshold_alpha.c
	* plug-ins/common/xbm.c
	* plug-ins/common/xpm.c
	* plug-ins/gap/gap_filter_main.c
	* plug-ins/gap/gap_main.c
	* plug-ins/gdyntext/gdyntext.c
	* plug-ins/gdyntext/gdyntext.h
	* plug-ins/gimpressionist/gimp.c
	* plug-ins/ifscompose/ifscompose.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/mosaic/mosaic.c
	* plug-ins/print/print.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/sinus/sinus.c
	* plug-ins/struc/struc.c
	* po-plug-ins/POTFILES.in: use N_() instead of _() when registering
	the menu path. Added dots in the menu path where appropriate and 
	changed the dialog layout in most of these plug-ins to conform better
	to the GIMP standard.
