@@ -161,7 +161,7 @@ gimp_install_procedure ("plug_in_layer_rot90",
 			PLUG_IN_AUTHOR,
 			PLUG_IN_COPYRIGHT,
 			PLUG_IN_VERSION,
-			_("<Image>/Layers/Rotate/90 degrees"),
+			N_("<Image>/Layers/Rotate/90 degrees"),
 			PLUG_IN_IMAGE_TYPES,
 			PROC_PLUG_IN,
 			nmenuargs, nreturn_vals,
@@ -172,7 +172,7 @@ gimp_install_procedure ("plug_in_layer_rot180",
 			PLUG_IN_AUTHOR,
 			PLUG_IN_COPYRIGHT,
 			PLUG_IN_VERSION,
-			_("<Image>/Layers/Rotate/180 degrees"),
+			N_("<Image>/Layers/Rotate/180 degrees"),
 			PLUG_IN_IMAGE_TYPES,
 			PROC_PLUG_IN,
 			nmenuargs, nreturn_vals,
@@ -183,7 +183,7 @@ gimp_install_procedure ("plug_in_layer_rot270",
 			PLUG_IN_AUTHOR,
 			PLUG_IN_COPYRIGHT,
 			PLUG_IN_VERSION,
-			_("<Image>/Layers/Rotate/270 degrees"),
+			N_("<Image>/Layers/Rotate/270 degrees"),
 			PLUG_IN_IMAGE_TYPES,
 			PROC_PLUG_IN,
 			nmenuargs, nreturn_vals,
@@ -195,7 +195,7 @@ gimp_install_procedure ("plug_in_image_rot90",
 			PLUG_IN_AUTHOR,
 			PLUG_IN_COPYRIGHT,
 			PLUG_IN_VERSION,
-			_("<Image>/Image/Transforms/Rotate/90 degrees"),
+			N_("<Image>/Image/Transforms/Rotate/90 degrees"),
 			PLUG_IN_IMAGE_TYPES,
 			PROC_PLUG_IN,
 			nmenuargs, nreturn_vals,
@@ -206,7 +206,7 @@ gimp_install_procedure ("plug_in_image_rot180",
 			PLUG_IN_AUTHOR,
 			PLUG_IN_COPYRIGHT,
 			PLUG_IN_VERSION,
-			_("<Image>/Image/Transforms/Rotate/180 degrees"),
+			N_("<Image>/Image/Transforms/Rotate/180 degrees"),
 			PLUG_IN_IMAGE_TYPES,
 			PROC_PLUG_IN,
 			nmenuargs, nreturn_vals,
@@ -217,7 +217,7 @@ gimp_install_procedure ("plug_in_image_rot270",
 			PLUG_IN_AUTHOR,
 			PLUG_IN_COPYRIGHT,
 			PLUG_IN_VERSION,
-			_("<Image>/Image/Transforms/Rotate/270 degrees"),
+			N_("<Image>/Image/Transforms/Rotate/270 degrees"),
 			PLUG_IN_IMAGE_TYPES,
 			PROC_PLUG_IN,
 			nmenuargs, nreturn_vals,
