@@ -187,7 +187,7 @@ query(void)
       "Tor Lillqvist <tml@iki.fi>",
       "Copyright 1999 Tor Lillqvist",
       "$Id$",
-      _("<Image>/File/Print"),
+      N_("<Image>/File/Print"),
       "RGB*,GRAY*,INDEXED*",
       PROC_PLUG_IN,
       print_nargs,
@@ -202,7 +202,7 @@ query(void)
       "Tor Lillqvist <tml@iki.fi>",
       "Copyright 1999 Tor Lillqvist",
       "$Id$",
-      _("<Image>/File/Page Setup"),
+      N_("<Image>/File/Page Setup"),
       "RGB*,GRAY*,INDEXED*",
       PROC_PLUG_IN,
       pagesetup_nargs,
